--- a/lib/turbo_web/templates/page/index.html.eex
+++ b/lib/turbo_web/templates/page/index.html.eex
@@ -1,8 +1,8 @@
 <div class="row">
-  <div class="col">
-    <h1>Hangman Game</h1>
-    <div id="root">
-      <p>React app not loaded...</p>
-    </div>
+  <div class="col" id="index-page">
+    <h1>Join a Game</h1>
+    <h6> Enter the name of the Game you want to join</h6>
+    <p><input type="text" class="game-input" id="game-input"></p>
+    <p><a href="javascript:" class="btn btn-primary" id="game-button" >Join Game</a></p>
   </div>
 </div>
