--- a/lib/turbo_web/templates/page/game.html.eex
+++ b/lib/turbo_web/templates/page/game.html.eex
@@ -1,6 +1,9 @@
 <div class="row">
   <div class="col">
     <h1>Turbo: <%= @game %></h1>
+    <audio autoplay>
+        <source src="<%= static_path(@conn, "/../images/cartheme.mp3") %>" type="audio/mpeg">
+    </audio>
     <script>
       window.gameName = "<%= @game %>";
     </script>
