--- a/lib/turbo_web/templates/page/index.html.eex
+++ b/lib/turbo_web/templates/page/index.html.eex
@@ -1,17 +1,17 @@
+
+<div class="firstpage-bg" >
 <div class="row">
   <div class="col" id="index-page">
-    <h1>Join a Game</h1>
+    <h3>Create a New Game or Enter the name of a currently running game</h3>
     <h6> Enter the name of the Game you want to join</h6>
     <p><input type="text" class="game-input" id="game-input"></p>
     <p><a href="javascript:" class="btn btn-primary" id="game-button" >Join Game</a></p>
-
-    <h2>List of currently running games</h2>
-    <ul>
+    <h3>List of currently running games</h3>
       <%= for game <- Turbo.GameBackup.list() do %>
         <li>
           <%= game %>
         </li>
       <% end %>
-    </ul>
   </div>
+</div>
 </div>
