--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -13,7 +13,7 @@ body { font-size: 20pt; }
   max-height: 100%;
   padding: 0;
   color: #ddd;
-  font-family: racefont;
+  font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
 }
 
 
