--- a/lib/turbo_web/templates/layout/app.html.eex
+++ b/lib/turbo_web/templates/layout/app.html.eex
@@ -29,6 +29,9 @@
         <%= render @view_module, @view_template, assigns %>
       </main>
     </div> <!-- /container -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src="<%= static_path(@conn, "/js/app.js") %>"></script>
+
   </body>
 </html>
