--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -50,7 +50,7 @@ body { font-size: 20pt; }
     text-align: left;
     margin-top: 30px;
   }
-  div{
+ div{
     text-align: left;
   }
 }
@@ -152,3 +152,9 @@ body { font-size: 20pt; }
     top: 15%;
   }
 }
+
+//
+// References
+// http://sass-lang.com/documentation/file.SASS_REFERENCE.html
+// Images and gif : https://giphy.com/gifs/turntables-139kYC03RSL8k
+// https://motions.work/motion/911
