--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -2,11 +2,7 @@
 @import "bootstrap";
 
 body { font-size: 20pt; }
-//
-// @font-face {
-//     font-family: racefont;
-//     src: url(http://www.1001fonts.com/halo-font.html?text=Join%20the%20Game&size=22);
-// }
+
 
 .container{
   max-width: 100%;
@@ -158,3 +154,10 @@ body { font-size: 20pt; }
 // http://sass-lang.com/documentation/file.SASS_REFERENCE.html
 // Images and gif : https://giphy.com/gifs/turntables-139kYC03RSL8k
 // https://motions.work/motion/911
+// Images and gif : https://giphy.com/gifs/turntables-139kYC03RSL8k
+// https://www.google.com/search?rlz=1C5CHFA_enUS763US763&biw=1680&bih=976&tbm=isch&sa=1&ei=FIC6WsWbDtLYsQXGgL3ACQ&q=finish+line+png&oq=finish+line+png&gs_l=psy-ab.3..0j0i7i30k1l6j0i5i30k1.2974.2974.0.3198.1.1.0.0.0.0.117.117.0j1.1.0....0...1c.1.64.psy-ab..0.1.117....0.Ng4qUmlfN50#imgdii=y2gxOXWr5xZp7M:&imgrc=-A9AcNQgGEN1HM:
+// https://www.google.com/search?biw=1641&bih=829&tbm=isch&sa=1&ei=ktOyWpDMC4n-sAXgk4bIDA&q=+png+empty+image&oq=+png+empty+image&gs_l=psy-ab.3..0i8i30k1.282487.284013.0.284268.5.5.0.0.0.0.237.515.2j1j1.4.0....0...1c.1.64.psy-ab..1.4.513...0j0i67k1j0i13k1j0i8i7i30k1.0.SSDYayKwAv8#imgrc=xl8oGWrBnX4Y-M:
+// https://www.houzz.com/product/8710226-san-francisco-skyline-silhouette-wall-decal-modern-wall-decals
+// https://www.iconfinder.com/icons/2451222/blast_bomb_boom_burst_effect_explode_terrible_explosion_icon
+// https://www.google.com/search?tbm=isch&q=road+blocker+png&chips=q:road+blocker+png,g_1:road+block&sa=X&ved=0ahUKEwj8tP7hwfbZAhVl9IMKHVi6ABYQ4lYIKCgA&biw=1642&bih=829&dpr=2#imgrc=UXerQm9c5RNxeM:
+// http://wallpaper-gallery.net/single/red-car-wallpapers/red-car-wallpapers-9.htm
